--- a/flex.htm
+++ b/flex.htm
@@ -29,7 +29,7 @@
             align-items: center;
             width: 60px;
             height: 60px;
-            border: 2px solid purple;
+            border: 2px solid grey;
             padding: 20px;
             flex-shrink: 1;
             flex-grow: 1;
